Update filter by stock product
