# storage/api-docs/api-docs.json
@@ -560,6 +560,15 @@
                         }
                     },
                     {
+                        "name": "stock",
+                        "in": "query",
+                        "description": "Filter stock quantity",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
                         "name": "page",
                         "in": "query",
                         "description": "Page number",
